# School-Projects

./: README.md
Introduction to cpp/: CMakeLists.txt
Introduction to cpp/Project/include/: constants.h  functionPrototypes.h
Introduction to cpp/Project/src/: functionDefinitions.cpp  main.cpp
SparseMatrix Python/: SparseMatrix Task 1 to 10.py  SparseMatrix.py  Test_SparseMatrix.py
WI/Assign 1/: app.py  globalVars.py  recommenderSystem.py
WI/Assign 1/templates/: calc.html  index.html
object bases cpp/: CMakeLists.txt  jukebox.txt
object bases cpp/Project/: CMakeLists.txt
object bases cpp/Project/include/: Album.h  Jukebox.h  Menu.h  MenuItem.h  Queue.h  Song.h  Time.h  constants.h
object bases cpp/Project/src/: Album.cpp  Jukebox.cpp  Menu.cpp  MenuItem.cpp  Queue.cpp  Song.cpp  Test_Album.cpp  Test_Jukebox.cpp  Test_Main.cpp  Test_Queue.cpp  Test_Song.cpp  Test_Time.cpp  Time.cpp  main.cpp
object oriented cpp/: CMakeLists.txt  Trains.txt
object oriented cpp/include/: Coach.h  CoverdFreight.h  Diesel.h  Electrical.h  OpenFreight.h  Simulator.h  Sleeping.h  Station.h  Time.h  Train.h  Vehicle.h  constants.h  helpFunctions.h
object oriented cpp/src/: Coach.cpp  CoverdFreight.cpp  Diesel.cpp  Electrical.cpp  OpenFreight.cpp  Simulator.cpp  Sleeping.cpp  Station.cpp  Time.cpp  Train.cpp  Vehicle.cpp  helpFunctions.cpp  main.cpp
superchess java/: build.xml
superchess java/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
superchess java/nbproject/private/: private.properties  private.xml
superchess java/src/tentamen_vt18_eritge7/: Tentamen_VT18_eritge7.java
